# research-spring-2026

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.obsidian/: workspace.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/.obsidian/: workspace.json
.planning/phases/01-data-foundation/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  01-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
data/benchmark/: events.json  methodology.md
data/sample/: sample_events.json
output/: decisions.jsonl  portfolio.csv  run1.jsonl  run2.jsonl  run3.jsonl
prompts/: personas.yaml
prompts/templates/: system.j2  user.j2
scripts/: visualize_runs.py
src/ensemble/: __init__.py  __main__.py  cli.py  contamination.py  fetcher.py  llm.py  loader.py  metrics.py  models.py  personas.py  portfolio.py  simulator.py  slicer.py
tests/: conftest.py  test_contamination.py  test_loader.py  test_models.py  test_personas.py  test_portfolio.py  test_simulator.py  test_slicer.py
